--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Buttons</title>
+    <title>Buttons Sample</title>
     <meta name="description" content="A collection of CSS buttons.">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="main.css" />
